nuevo tipo de cuenta tipo solana