@@ -51,34 +51,9 @@ public class BinanceService {
 	@Autowired
 	private AccountBinanceRepository accountRepo;
 
-	// Claves API de cada cuenta
-	private final String[][] apiKeys = {
-			{ "MILTON", "EfBN9mFWAxk7CwsZzu37sXIGXyIQnyLVrAs3aqZOLAa3NumayunaGRQIJ6fi4U2r",
-					"NbdiovuQxwgzwANxgZC669Jke5MZJUH3hyLT6BD8iWYz91EVK6e9adOY2Wq4t6nK" },
-			{ "CESAR", "Ho474mufN8vTwvrZLjj8DdZHxa88JYlCrcPHp1r7UAhwc197So9vmUG9tRhM3XNr",
-					"Ns41sTlvAM3nUzD0qMPE4PW57omuSxOPKdcngudgqVPphExjJC3tWX8kcxwibXDz" },
-			{ "MARCEL", "vtNXEFCDEYxWpGGipXG210zzq5i2FnJAqmK5LJtRGiq5NRMCJqCQEOcR85SAunUP",
-					"J9eIUXMxwFggHvU2HHp2EiWfNaXGvShSx5UihepHmW1gIjIBe3waZC3JvMUPBfga" },
-			{ "SONIA", "N0lUyNy3rlgNxq6XKlKdjxVLppvBwPl1Bxi7FeDZ82G7X47oL2tor20vprJaLZLk",
-					"Nqhxi7XMzNmQMk4phC442bkA368L8Toi0EAidGOJhal2f72olp5FMhOY7OoaehUg" },
-			{ "BERNANDA", "UxPVjnvpZBgKgxHV6Qbds15TlTtFrBgyOycsw1Enj2ybiZFDc6ewk51ys3Sxvgxm",
-					"GCliNB78z1FJkx5542QeY3PXsUBqJJMPQNZ6MmKAeEUjhItMLIhwKNhUw6pSCH8E" },
-			{ "RIK", "vMSWVD5tca6o73oCOLcxefK0W4FA30nwUvAFhrRlpEfmOyX1Jv6Y94llAYJJT9HU",
-					"nknvsAdsO1BWApJ7119jJKWTHWbT2HCGP0PJNrXsFiRR8GlWxHqmt25DyhNxu7Gw" },
-			{ "JULIO", "M2GxXbjasdJPx6oWXhr3aKoeUB6WnfhFDZ02RmdTEhJlFkWMZkWqUCgfynM5iakd",
-					"CDOTuuPusPaZSZakDmISILjjmSNfW6v9A3QGqdh7F43OwD7MT5LQgJowto2VFBlt" } };
-
 	public List<String> getAllAccountNames() {
-		List<String> dbAccounts = accountRepo.findByTipo("BINANCE").stream()
-				.filter(a -> a.getApiKey() != null && a.getApiSecret() != null).map(AccountBinance::getName)
-				.collect(Collectors.toList());
-
-		List<String> staticAccounts = Arrays.stream(apiKeys).map(keys -> keys[0])
-				.filter(name -> dbAccounts.stream().noneMatch(dbName -> dbName.equals(name)))
-				.collect(Collectors.toList());
-
-		dbAccounts.addAll(staticAccounts);
-		return dbAccounts;
+		return accountRepo.findByTipo("BINANCE").stream().filter(a -> a.getApiKey() != null && a.getApiSecret() != null)
+				.map(AccountBinance::getName).toList();
 	}
 
 	// metodo para obtener los movimientos de binancepay las que se hacen por correo
@@ -197,14 +172,6 @@ public class BinanceService {
 				return new String[] { account.getApiKey(), account.getApiSecret() };
 			}
 		}
-
-		// Si no está en DB o es de tipo diferente, usa los quemados
-		for (String[] key : apiKeys) {
-			if (key[0].equals(accountName)) {
-				return new String[] { key[1], key[2] };
-			}
-		}
-
 		return null;
 	}
 
@@ -233,57 +200,6 @@ public class BinanceService {
 		long startTime = today.atStartOfDay(ZoneId.of("America/Bogota")).toInstant().toEpochMilli();
 		long endTime = today.plusDays(1).atStartOfDay(ZoneId.of("America/Bogota")).toInstant().toEpochMilli();
 		return getP2POrdersInRange(account, startTime, endTime);
-	}
-
-	// En BinanceService.java
-	public String getAllSpotTradeOrdersTRXUSDT() {
-		try {
-			List<JsonObject> allTrades = new ArrayList<>();
-
-			for (String[] accountEntry : apiKeys) {
-				String account = accountEntry[0];
-				String apiKey = accountEntry[1];
-				String secretKey = accountEntry[2];
-
-				// Consultar solo TRXUSDT con límite 100
-				String response = getSpotOrders(account, "TRXUSDT", 20);
-				JsonArray tradesArray = JsonParser.parseString(response).getAsJsonArray();
-
-				for (JsonElement el : tradesArray) {
-					JsonObject trade = el.getAsJsonObject();
-					trade.addProperty("account", account);
-					allTrades.add(trade);
-				}
-			}
-
-			return new Gson().toJson(allTrades);
-
-		} catch (Exception e) {
-			return "{\"error\": \"Error interno: " + e.getMessage() + "\"}";
-		}
-	}
-
-	//
-	public String getSpotOrders(String account, String symbol, int limit) {
-		try {
-			String[] credentials = getApiCredentials(account);
-			if (credentials == null)
-				return "{\"error\": \"Cuenta no válida.\"}";
-
-			String apiKey = credentials[0];
-			String secretKey = credentials[1];
-
-			long timestamp = getServerTime();
-			String query = "symbol=" + symbol + "&limit=" + limit + "&timestamp=" + timestamp + "&recvWindow=60000";
-
-			String signature = hmacSha256(secretKey, query);
-			String url = "https://api.binance.com/api/v3/allOrders?" + query + "&signature=" + signature;
-
-			return sendBinanceRequestWithProxy(url, apiKey);
-
-		} catch (Exception e) {
-			return "{\"error\": \"Error interno: " + e.getMessage() + "\"}";
-		}
 	}
 
 	// estp es para futures
@@ -378,201 +294,6 @@ public class BinanceService {
 		}
 	}
 
-	public String getSpotBalanceByAsset(String account, String asset) {
-		try {
-			String[] credentials = getApiCredentials(account);
-			if (credentials == null)
-				return "{\"error\": \"Cuenta no válida.\"}";
-
-			String apiKey = credentials[0];
-			String secretKey = credentials[1];
-
-			long timestamp = getServerTime();
-			String query = "timestamp=" + timestamp + "&recvWindow=60000";
-			String signature = hmacSha256(secretKey, query);
-			String url = "https://api.binance.com/api/v3/account?" + query + "&signature=" + signature;
-
-			String response = sendBinanceRequestWithProxy(url, apiKey);
-			JsonObject accountData = JsonParser.parseString(response).getAsJsonObject();
-			JsonArray balances = accountData.getAsJsonArray("balances");
-
-			for (int i = 0; i < balances.size(); i++) {
-				JsonObject balance = balances.get(i).getAsJsonObject();
-				if (balance.get("asset").getAsString().equalsIgnoreCase(asset)) {
-					JsonObject result = new JsonObject();
-					result.add("balance", balance);
-					return result.toString();
-				}
-			}
-
-			return "{\"error\": \"Activo no encontrado.\"}";
-
-		} catch (Exception e) {
-			return "{\"error\": \"Error interno: " + e.getMessage() + "\"}";
-		}
-	}
-
-	// este metodo busca el valor de los trx en una fecha que le mandamos, esto lo
-	// uso para pasar los trx a usdt
-	// en traspasos y ventas, podemos ver en el spotcontroller que se usa este
-	// metodo
-
-	public Double getHistoricalPriceTRXUSDT(LocalDateTime fecha) {
-		try {
-			long startTime = fecha.atZone(ZoneId.of("UTC")).toInstant().toEpochMilli();
-			long endTime = startTime + 60000; // +1 minuto
-
-			String url = "https://api.binance.com/api/v3/klines?symbol=TRXUSDT&interval=1m&startTime=" + startTime
-					+ "&endTime=" + endTime;
-
-			String response = sendBinanceRequestWithProxy(url, null);
-			JsonArray klines = JsonParser.parseString(response).getAsJsonArray();
-			if (klines.size() > 0) {
-				JsonArray firstKline = klines.get(0).getAsJsonArray();
-				String closePriceStr = firstKline.get(4).getAsString(); // índice 4 = precio de cierre
-				return Double.parseDouble(closePriceStr);
-			}
-
-		} catch (Exception e) {
-			// Log error si quieres
-		}
-		return null; // si falla o no encuentra precio
-	}
-
-	// Método auxiliar para manejar conversiones de valores de JSON a Double con
-	// validación
-	private double getJsonDouble(JsonObject object, String key) {
-		if (object.has(key) && !object.get(key).isJsonNull()) {
-			return object.get(key).getAsDouble();
-		} else {
-			// Si el valor no existe o es null, devuelve 0.0
-			System.out.println("Clave '" + key + "' no existe o es null.");
-			return 0.0;
-		}
-	}
-
-	private String getSpotBalance(String account) {
-		try {
-			String[] credentials = getApiCredentials(account);
-			if (credentials == null)
-				return "{\"error\": \"Cuenta no válida.\"}";
-
-			String apiKey = credentials[0];
-			String secretKey = credentials[1];
-
-			long timestamp = getServerTime();
-			String query = "timestamp=" + timestamp + "&recvWindow=60000";
-			String signature = hmacSha256(secretKey, query);
-			String url = "https://api.binance.com/api/v3/account?" + query + "&signature=" + signature;
-
-			String response = sendBinanceRequestWithProxy(url, apiKey);
-
-			// Verificar si la respuesta es válida y no nula
-			if (response == null || response.isEmpty()) {
-				return "{\"error\": \"La respuesta de Spot Wallet está vacía o nula.\"}";
-			}
-
-			// Parseamos la respuesta como un JSON Object
-			JsonObject accountData = JsonParser.parseString(response).getAsJsonObject();
-			if (accountData == null || !accountData.isJsonObject()) {
-				return "{\"error\": \"Error al analizar la respuesta de Spot Wallet.\"}";
-			}
-
-			// Verificar que la clave "balances" exista y que sea válida
-			if (accountData.has("balances") && accountData.get("balances").isJsonArray()) {
-				JsonArray balances = accountData.getAsJsonArray("balances");
-				double totalBalance = 0;
-				for (JsonElement element : balances) {
-					JsonObject balance = element.getAsJsonObject();
-
-					double freeBalance = getJsonDouble(balance, "free");
-					double lockedBalance = getJsonDouble(balance, "locked");
-
-					// Sumar balance disponible y bloqueado para obtener el balance total
-					totalBalance += freeBalance + lockedBalance;
-				}
-
-				return "{\"totalBalance\": " + totalBalance + "}";
-			} else {
-				return "{\"error\": \"La clave 'balances' no se encuentra en la respuesta.\"}";
-			}
-
-		} catch (Exception e) {
-			return "{\"error\": \"Error interno: " + e.getMessage() + "\"}";
-		}
-	}
-
-	private String getFuturesBalance(String account) {
-		try {
-			String[] credentials = getApiCredentials(account);
-			if (credentials == null)
-				return "{\"error\": \"Cuenta no válida.\"}";
-
-			String apiKey = credentials[0];
-			String secretKey = credentials[1];
-			long timestamp = getServerTime();
-			String query = "timestamp=" + timestamp + "&recvWindow=60000";
-			String signature = hmacSha256(secretKey, query);
-			String url = "https://fapi.binance.com/fapi/v2/balance?" + query + "&signature=" + signature;
-
-			String response = sendBinanceRequestWithProxy(url, apiKey);
-
-			// Verificar si la respuesta es válida y no nula
-			if (response == null || response.isEmpty()) {
-				return "{\"error\": \"La respuesta de Futures Wallet está vacía o nula.\"}";
-			}
-
-			// Imprimir la respuesta para depuración
-			System.out.println("Response Futures Wallet: " + response);
-
-			// Parseamos la respuesta como un JSON Array
-			JsonArray balanceArray = JsonParser.parseString(response).getAsJsonArray();
-			if (balanceArray == null || balanceArray.size() == 0) {
-				return "{\"error\": \"La respuesta de Futures Wallet está vacía.\"}";
-			}
-
-			double totalBalance = 0;
-			for (JsonElement element : balanceArray) {
-				JsonObject balance = element.getAsJsonObject();
-				double availableBalance = balance.has("availableBalance")
-						? balance.get("availableBalance").getAsDouble()
-						: 0;
-				double balanceTotal = balance.has("balance") ? balance.get("balance").getAsDouble() : 0;
-
-				// Sumar balance total, disponible
-				totalBalance += balanceTotal + availableBalance;
-			}
-
-			return "{\"totalBalance\": " + totalBalance + "}";
-
-		} catch (Exception e) {
-			return "{\"error\": \"Error interno: " + e.getMessage() + "\"}";
-		}
-	}
-
-	private double calculateTotalBalance(JsonObject balanceData) {
-		double total = 0;
-
-		// Si el balanceData contiene una lista de balances de spot o futuros, sumamos
-		// todos
-		if (balanceData.has("balances")) {
-			JsonArray balances = balanceData.getAsJsonArray("balances");
-			for (int i = 0; i < balances.size(); i++) {
-				JsonObject balance = balances.get(i).getAsJsonObject();
-				double freeBalance = balance.get("free").getAsDouble();
-				double lockedBalance = balance.get("locked").getAsDouble();
-
-				// Sumar balance libre y bloqueado
-				total += freeBalance + lockedBalance;
-			}
-		} else if (balanceData.has("totalWalletBalance")) {
-			// En el caso de futuros, obtenemos el balance total de la wallet
-			total = balanceData.get("totalWalletBalance").getAsDouble();
-		}
-
-		return total;
-	}
-
 	public Double getEstimatedSpotBalance(String account) {
 		try {
 			// 1) Credenciales
@@ -622,10 +343,7 @@ public class BinanceService {
 		}
 	}
 
-	/**
-	 * Consulta el precio de mercado de asset en USDT. Para USDT devuelve 1.0
-	 * directamente.
-	 */
+
 	public double getPriceInUsdt(String asset) {
 		if ("USDT".equalsIgnoreCase(asset)) {
 			return 1.0;
@@ -858,48 +576,7 @@ public class BinanceService {
 		}
 	}
 
-	public BigDecimal calcularComisionUSDTDesdeHash(String txHash) {
-		try {
-			// 1. Consultar transacción en TronScan
-			String tronScanUrl = "https://apilist.tronscanapi.com/api/transaction-info?hash=" + txHash;
-			RestTemplate restTemplate = new RestTemplate();
-			String tronResponse = restTemplate.getForObject(tronScanUrl, String.class);
 
-			JsonObject tronJson = JsonParser.parseString(tronResponse).getAsJsonObject();
-
-			// 2. Obtener fee en SUN y timestamp
-			long feeSun = tronJson.get("cost").getAsJsonObject().get("net_fee").getAsLong(); // o energy_fee según el
-																								// caso
-			long timestampMillis = tronJson.get("timestamp").getAsLong();
-
-			// 3. Convertir SUN → TRX
-			BigDecimal feeTRX = new BigDecimal(feeSun).divide(BigDecimal.valueOf(1_000_000));
-
-			// 4. Obtener precio histórico TRX/USDT en ese minuto
-			long startTime = timestampMillis - (timestampMillis % 60000);
-			String binanceUrl = String.format(
-					"https://api.binance.com/api/v3/klines?symbol=TRXUSDT&interval=1m&startTime=%d&endTime=%d&limit=1",
-					startTime, startTime + 60000);
-
-			String binanceResponse = restTemplate.getForObject(binanceUrl, String.class);
-			JsonArray vela = JsonParser.parseString(binanceResponse).getAsJsonArray();
-			if (vela.size() == 0) {
-				throw new RuntimeException("No se encontró precio para ese momento");
-			}
-
-			String precioCierreStr = vela.get(0).getAsJsonArray().get(4).getAsString();
-			BigDecimal precioTRXUSDT = new BigDecimal(precioCierreStr);
-
-			// 5. Calcular comisión en USDT
-			return feeTRX.multiply(precioTRXUSDT);
-
-		} catch (Exception e) {
-			throw new RuntimeException("Error calculando comisión en USDT desde hash: " + e.getMessage(), e);
-		}
-	}
-
-	// para obtener el hisorial de traider o hisorial de operaciones spot
-	// Nuevo método para obtener todos los trades de spot para todas las cuentas
 	public String getAllSpotTradesForAllAccounts(String symbol, int limit) {
 		try {
 			List<JsonObject> allTrades = new ArrayList<>();
@@ -942,9 +619,6 @@ public class BinanceService {
 		}
 	}
 
-	// Método modificado para obtener trades de spot usando el endpoint correcto.
-	// Se hace privado para que sea llamado solo internamente.
-	// En BinanceService.java
 	public String getSpotTrades(String account, String symbol, int limit) {
 		try {
 			String[] credentials = getApiCredentials(account);
@@ -974,170 +648,174 @@ public class BinanceService {
 
 	// Método para obtener el historial de órdenes completadas o canceladas
 	public String getOrderHistory(String apiKey, String secretKey, String symbol, int limit) throws Exception {
-	    long ts = getServerTime();
-	    String q = "symbol="+symbol+"&timestamp="+ts+"&recvWindow=60000&limit="+limit;
-	    String sig = hmacSha256(secretKey, q);
-	    String url = "https://api.binance.com/api/v3/allOrders?" + q + "&signature=" + sig;
-	    return sendBinanceRequestWithProxy(url, apiKey);
+		long ts = getServerTime();
+		String q = "symbol=" + symbol + "&timestamp=" + ts + "&recvWindow=60000&limit=" + limit;
+		String sig = hmacSha256(secretKey, q);
+		String url = "https://api.binance.com/api/v3/allOrders?" + q + "&signature=" + sig;
+		return sendBinanceRequestWithProxy(url, apiKey);
 	}
-	
-	public Double getPriceInUSDT(String asset) {
-	    if (asset == null) return null;
-	    String a = asset.trim().toUpperCase();
-	    if ("USDT".equals(a) || "USDC".equals(a)) return 1.0;
 
-	    String symbol = a + "USDT";
-	    String url = "https://api.binance.com/api/v3/ticker/price?symbol=" + symbol;
-	    try {
-	        String resp = sendBinanceRequestWithProxy(url, null);
-	        JsonObject obj = JsonParser.parseString(resp).getAsJsonObject();
-	        return obj.get("price").getAsDouble();
-	    } catch (RuntimeException re) {
-	        System.out.println("⚠️ No pude obtener precio de " + symbol + ": " + re.getMessage());
-	        return null; // el caller lo tratará como 0.0
-	    } catch (Exception e) {
-	        return null;
-	    }
+	public Double getPriceInUSDT(String asset) {
+		if (asset == null)
+			return null;
+		String a = asset.trim().toUpperCase();
+		if ("USDT".equals(a) || "USDC".equals(a))
+			return 1.0;
+
+		String symbol = a + "USDT";
+		String url = "https://api.binance.com/api/v3/ticker/price?symbol=" + symbol;
+		try {
+			String resp = sendBinanceRequestWithProxy(url, null);
+			JsonObject obj = JsonParser.parseString(resp).getAsJsonObject();
+			return obj.get("price").getAsDouble();
+		} catch (RuntimeException re) {
+			System.out.println("⚠️ No pude obtener precio de " + symbol + ": " + re.getMessage());
+			return null; // el caller lo tratará como 0.0
+		} catch (Exception e) {
+			return null;
+		}
 	}
-	
+
 	// BinanceService.java
 
 	public Map<String, Double> getSpotBalancesMap(String account) throws Exception {
-	    String[] creds = getApiCredentials(account);
-	    if (creds == null) throw new RuntimeException("Cuenta no válida");
-	    String apiKey = creds[0], secret = creds[1];
+		String[] creds = getApiCredentials(account);
+		if (creds == null)
+			throw new RuntimeException("Cuenta no válida");
+		String apiKey = creds[0], secret = creds[1];
 
-	    long ts = getServerTime();
-	    String q = "timestamp=" + ts + "&recvWindow=60000";
-	    String sig = hmacSha256(secret, q);
-	    String url = "https://api.binance.com/api/v3/account?" + q + "&signature=" + sig;
+		long ts = getServerTime();
+		String q = "timestamp=" + ts + "&recvWindow=60000";
+		String sig = hmacSha256(secret, q);
+		String url = "https://api.binance.com/api/v3/account?" + q + "&signature=" + sig;
 
-	    String raw = sendBinanceRequestWithProxy(url, apiKey);
-	    JsonArray balances = JsonParser.parseString(raw)
-	            .getAsJsonObject().getAsJsonArray("balances");
+		String raw = sendBinanceRequestWithProxy(url, apiKey);
+		JsonArray balances = JsonParser.parseString(raw).getAsJsonObject().getAsJsonArray("balances");
 
-	    Map<String, Double> map = new HashMap<>();
-	    for (JsonElement el : balances) {
-	        JsonObject b = el.getAsJsonObject();
-	        double qty = b.get("free").getAsDouble() + b.get("locked").getAsDouble();
-	        if (qty <= 0) continue;
-	        String asset = b.get("asset").getAsString();
-	        map.put(asset, qty);
-	    }
-	    return map;
+		Map<String, Double> map = new HashMap<>();
+		for (JsonElement el : balances) {
+			JsonObject b = el.getAsJsonObject();
+			double qty = b.get("free").getAsDouble() + b.get("locked").getAsDouble();
+			if (qty <= 0)
+				continue;
+			String asset = b.get("asset").getAsString();
+			map.put(asset, qty);
+		}
+		return map;
 	}
 
-	/** Funding Wallet: si NO envías "asset", Binance devuelve solo activos con balance > 0 */
 	public Map<String, Double> getFundingBalancesMap(String account) throws Exception {
-	    String[] creds = getApiCredentials(account);
-	    if (creds == null) throw new RuntimeException("Cuenta no válida");
-	    String apiKey = creds[0], secret = creds[1];
+		String[] creds = getApiCredentials(account);
+		if (creds == null)
+			throw new RuntimeException("Cuenta no válida");
+		String apiKey = creds[0], secret = creds[1];
 
-	    long ts = getServerTime();
-	    String params = "timestamp=" + ts + "&recvWindow=60000";
-	    String signature = hmacSha256(secret, params);
+		long ts = getServerTime();
+		String params = "timestamp=" + ts + "&recvWindow=60000";
+		String signature = hmacSha256(secret, params);
 
-	    URL url = new URL("https://api.binance.com/sapi/v1/asset/get-funding-asset");
-	    HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-	    conn.setRequestMethod("POST");
-	    conn.setDoOutput(true);
-	    conn.setRequestProperty("X-MBX-APIKEY", apiKey);
-	    try (OutputStream os = conn.getOutputStream()) {
-	        os.write((params + "&signature=" + signature).getBytes(StandardCharsets.UTF_8));
-	    }
-	    if (conn.getResponseCode() != 200) {
-	        throw new RuntimeException("HTTP Funding: " + conn.getResponseCode());
-	    }
-	    String resp = new BufferedReader(new InputStreamReader(conn.getInputStream()))
-	            .lines().collect(Collectors.joining());
+		URL url = new URL("https://api.binance.com/sapi/v1/asset/get-funding-asset");
+		HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+		conn.setRequestMethod("POST");
+		conn.setDoOutput(true);
+		conn.setRequestProperty("X-MBX-APIKEY", apiKey);
+		try (OutputStream os = conn.getOutputStream()) {
+			os.write((params + "&signature=" + signature).getBytes(StandardCharsets.UTF_8));
+		}
+		if (conn.getResponseCode() != 200) {
+			throw new RuntimeException("HTTP Funding: " + conn.getResponseCode());
+		}
+		String resp = new BufferedReader(new InputStreamReader(conn.getInputStream())).lines()
+				.collect(Collectors.joining());
 
-	    Map<String, Double> map = new HashMap<>();
-	    JsonArray arr = JsonParser.parseString(resp).getAsJsonArray();
-	    for (JsonElement el : arr) {
-	        JsonObject o = el.getAsJsonObject();
-	        String asset = o.get("asset").getAsString();
-	        double free   = o.has("free")   ? o.get("free").getAsDouble()   : 0d;
-	        double freeze = o.has("freeze") ? o.get("freeze").getAsDouble() : 0d;
-	        double qty = free + freeze;
-	        if (qty > 0) map.merge(asset, qty, Double::sum);
-	    }
-	    return map;
+		Map<String, Double> map = new HashMap<>();
+		JsonArray arr = JsonParser.parseString(resp).getAsJsonArray();
+		for (JsonElement el : arr) {
+			JsonObject o = el.getAsJsonObject();
+			String asset = o.get("asset").getAsString();
+			double free = o.has("free") ? o.get("free").getAsDouble() : 0d;
+			double freeze = o.has("freeze") ? o.get("freeze").getAsDouble() : 0d;
+			double qty = free + freeze;
+			if (qty > 0)
+				map.merge(asset, qty, Double::sum);
+		}
+		return map;
 	}
 
 	/** Spot + Funding (puedes extender a Futures si lo necesitas) */
 	public Map<String, Double> getAllBalancesByAsset(String account) {
-	    try {
-	        Map<String, Double> spot = getSpotBalancesMap(account);
-	        Map<String, Double> fund = getFundingBalancesMap(account);
-	        // Merge
-	        fund.forEach((k, v) -> spot.merge(k, v, Double::sum));
-	        return spot; // contiene la suma final por símbolo
-	    } catch (Exception e) {
-	        throw new RuntimeException("Error obteniendo balances de " + account + ": " + e.getMessage(), e);
-	    }
+		try {
+			Map<String, Double> spot = getSpotBalancesMap(account);
+			Map<String, Double> fund = getFundingBalancesMap(account);
+			// Merge
+			fund.forEach((k, v) -> spot.merge(k, v, Double::sum));
+			return spot; // contiene la suma final por símbolo
+		} catch (Exception e) {
+			throw new RuntimeException("Error obteniendo balances de " + account + ": " + e.getMessage(), e);
+		}
 	}
 
 	// En BinanceService.java (añade al final)
 
 	public String getMyTradesByOrder(String apiKey, String secretKey, String symbol, long orderId) throws Exception {
-	    long ts = getServerTime();
-	    String q = "symbol="+symbol+"&orderId="+orderId+"&timestamp="+ts+"&recvWindow=60000";
-	    String sig = hmacSha256(secretKey, q);
-	    String url = "https://api.binance.com/api/v3/myTrades?" + q + "&signature=" + sig;
-	    return sendBinanceRequestWithProxy(url, apiKey);
+		long ts = getServerTime();
+		String q = "symbol=" + symbol + "&orderId=" + orderId + "&timestamp=" + ts + "&recvWindow=60000";
+		String sig = hmacSha256(secretKey, q);
+		String url = "https://api.binance.com/api/v3/myTrades?" + q + "&signature=" + sig;
+		return sendBinanceRequestWithProxy(url, apiKey);
 	}
 
 	/** Activos con balance > 0 (spot) para inferir símbolos probables. */
 	public Set<String> getNonZeroAssets(String account) {
-	    try {
-	        String[] creds = getApiCredentials(account);
-	        if (creds == null) throw new RuntimeException("Cuenta no válida");
-	        String apiKey = creds[0], secret = creds[1];
+		try {
+			String[] creds = getApiCredentials(account);
+			if (creds == null)
+				throw new RuntimeException("Cuenta no válida");
+			String apiKey = creds[0], secret = creds[1];
 
-	        long ts = getServerTime();
-	        String q = "timestamp=" + ts + "&recvWindow=60000";
-	        String sig = hmacSha256(secret, q);
-	        String url = "https://api.binance.com/api/v3/account?" + q + "&signature=" + sig;
+			long ts = getServerTime();
+			String q = "timestamp=" + ts + "&recvWindow=60000";
+			String sig = hmacSha256(secret, q);
+			String url = "https://api.binance.com/api/v3/account?" + q + "&signature=" + sig;
 
-	        String raw = sendBinanceRequestWithProxy(url, apiKey);
-	        JsonArray balances = JsonParser.parseString(raw).getAsJsonObject().getAsJsonArray("balances");
+			String raw = sendBinanceRequestWithProxy(url, apiKey);
+			JsonArray balances = JsonParser.parseString(raw).getAsJsonObject().getAsJsonArray("balances");
 
-	        Set<String> out = new HashSet<>();
-	        for (JsonElement el : balances) {
-	            JsonObject b = el.getAsJsonObject();
-	            double qty = b.get("free").getAsDouble() + b.get("locked").getAsDouble();
-	            if (qty > 0.0) out.add(b.get("asset").getAsString());
-	        }
-	        return out;
-	    } catch (Exception e) {
-	        throw new RuntimeException("Error al leer balances de " + account + ": " + e.getMessage(), e);
-	    }
+			Set<String> out = new HashSet<>();
+			for (JsonElement el : balances) {
+				JsonObject b = el.getAsJsonObject();
+				double qty = b.get("free").getAsDouble() + b.get("locked").getAsDouble();
+				if (qty > 0.0)
+					out.add(b.get("asset").getAsString());
+			}
+			return out;
+		} catch (Exception e) {
+			throw new RuntimeException("Error al leer balances de " + account + ": " + e.getMessage(), e);
+		}
 	}
 
 	// En BinanceService.java
 	public Set<String> getTradableSymbolsByQuotes(Collection<String> quotes) {
-	    try {
-	        String url = "https://api.binance.com/api/v3/exchangeInfo";
-	        String resp = sendBinanceRequestWithProxy(url, null);
-	        JsonObject root = JsonParser.parseString(resp).getAsJsonObject();
-	        JsonArray syms = root.getAsJsonArray("symbols");
+		try {
+			String url = "https://api.binance.com/api/v3/exchangeInfo";
+			String resp = sendBinanceRequestWithProxy(url, null);
+			JsonObject root = JsonParser.parseString(resp).getAsJsonObject();
+			JsonArray syms = root.getAsJsonArray("symbols");
 
-	        Set<String> out = new HashSet<>();
-	        for (JsonElement el : syms) {
-	            JsonObject s = el.getAsJsonObject();
-	            if (!"TRADING".equalsIgnoreCase(s.get("status").getAsString())) continue;
-	            String quote = s.get("quoteAsset").getAsString();
-	            if (quotes.contains(quote)) {
-	                out.add(s.get("symbol").getAsString()); // p.ej. TRXUSDT
-	            }
-	        }
-	        return out;
-	    } catch (Exception e) {
-	        throw new RuntimeException("No pude cargar exchangeInfo: " + e.getMessage(), e);
-	    }
+			Set<String> out = new HashSet<>();
+			for (JsonElement el : syms) {
+				JsonObject s = el.getAsJsonObject();
+				if (!"TRADING".equalsIgnoreCase(s.get("status").getAsString()))
+					continue;
+				String quote = s.get("quoteAsset").getAsString();
+				if (quotes.contains(quote)) {
+					out.add(s.get("symbol").getAsString()); // p.ej. TRXUSDT
+				}
+			}
+			return out;
+		} catch (Exception e) {
+			throw new RuntimeException("No pude cargar exchangeInfo: " + e.getMessage(), e);
+		}
 	}
-
-
-
 
 }
